# JAC

./: .gitignore  README.md
fw/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
fw/components/compat/: CMakeLists.txt  adc_compat.c  adc_compat.h  bcd.h  config_compat.c  config_compat.h  dis_compat.c  dis_compat.h  i2c_compat.c  i2c_compat.h  io_compat.c  io_compat.h  resources.c  resources.h  rtc_compat.c  rtc_compat.h  system_info.h
fw/components/dns_server/: CMakeLists.txt  dns_server.c
fw/components/http_server/: CMakeLists.txt  http_server.c  http_server.h
fw/components/jac/: CMakeLists.txt  jac.c  jac.h
fw/components/rx8025t/: CMakeLists.txt  rx8025t.c  rx8025t.h
fw/components/simple_theme/: CMakeLists.txt  simple_theme.c  simple_theme.h  theme_default.c
fw/components/u8g2/: CMakeLists.txt
fw/components/u8g2/csrc/: u8g2.h  u8g2_d_memory.c  u8g2_d_setup.c  u8x8.h  u8x8_d_il3895_122x250.c  u8x8_d_ssd1608_128x296.c
fw/main/: CMakeLists.txt  jac.c  joke.c  main.c  project_include.cmake
fw/resources/: batt-dead.xbm  core-failure.xbm  moon.xpm  myfont.map  myfont.txt  tree.xbm
fw/spiffs_image/: index.html  jac.js  joke.js
fw/tools/: 4gcov.py  genfonts.sh  genota.sh  genres.sh  uni2utf8.py  xbm2bin.py
hw/: JAC.kicad_pcb  JAC.kicad_pro  JAC.kicad_sch  JAC.kicad_sym  fp-lib-table  sym-lib-table
hw/3dmodels/: 213-Body.step  4056M.step  4056M.wrl  C.step  C.wrl  EPDM.wrl  SOP14.STEP
hw/JAC.pretty/: 4056M.kicad_mod  EPDM.kicad_mod  ESP32-C3-WROOM-02.kicad_mod  HOLE.kicad_mod  TYPE-C-VERT.kicad_mod
hw/case/: JACCase.FCStd
(+26 files in other folders)
